# AI-bootcamp-lilu-capstone

./: README.md  pyproject.toml
.specify/: init-options.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
docs/: story-requirements.md  testing-guidelines.md  ui-guidelines.md
scripts/: launch_game_terminal.py  run_game.sh
src/game/: __init__.py  engine.py  launch_terminal.py  main.py  server.py  world.py
tests/: test_engine.py
web/: index.html  package-lock.json  package.json
web/src/: App.jsx  game.js  styles.css
